recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:9: error: expected start of definition
	override def run() {
                 ^Spiral:13: error: Unmatched closing brace '}' ignored here
}
^